fixed buttons wrapping in App.tsx changed link for typespeed in projects.json

--- a/src/App/App.css
+++ b/src/App/App.css
@@ -3,7 +3,7 @@
 }
 
 .buttons {
-  max-width: 80%;
+  max-width: 90%;
 }
 
 .heading > a {
